fixed album show and album index styling, overflow issues fixed

--- a/app/assets/stylesheets/music_player_content.scss
+++ b/app/assets/stylesheets/music_player_content.scss
@@ -1,8 +1,8 @@
 .album-container {
   margin-left: 250px;
   background: #121212;
-  height: auto;
-  min-height: 790px;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .link-btn:hover {
